[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/QuestionnaireList/QuestionnaireList.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/fontawesome-free-5.15.4-desktop/otfs/Font Awesome 5 Free-Solid-900.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]

[node name="QuestionnaireList" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
margin_right = 1010.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="VBox/HBoxContainer"]
margin_top = 4.0
margin_right = 98.0
margin_bottom = 18.0
text = "Questionnaires"
align = 1

[node name="AddButton" type="Button" parent="VBox/HBoxContainer"]
margin_left = 984.0
margin_right = 1010.0
margin_bottom = 22.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "ÔÅß"

[node name="Scroll" type="ScrollContainer" parent="VBox"]
margin_top = 26.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 2 )

[node name="ButtonList" type="VBoxContainer" parent="VBox/Scroll"]
margin_right = 1010.0
size_flags_horizontal = 3

[connection signal="pressed" from="VBox/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
